@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-2.2.0_alpha161.ebuild,v 1.1 2013/01/24 22:13:22 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-2.2.0_alpha161.ebuild,v 1.2 2013/01/27 22:04:14 zmedico Exp $
 
 # Require EAPI 2 since we now require at least python-2.6 (for python 3
 # syntax support) which also requires EAPI 2.
@@ -281,15 +281,6 @@ pkg_preinst() {
 		ewarn "For optimal performance in xattr handling, install"
 		ewarn "dev-python/pyxattr, or install >=dev-lang/python-3.3 and"
 		ewarn "enable USE=python3 for $CATEGORY/$PN."
-	fi
-
-	if ! use build && ! has_version dev-python/pycrypto && \
-		! has_version '>=dev-lang/python-2.6[ssl]' ; then
-		ewarn "If you are an ebuild developer and you plan to commit ebuilds"
-		ewarn "with this system then please install dev-python/pycrypto or"
-		ewarn "enable the ssl USE flag for >=dev-lang/python-2.6 in order"
-		ewarn "to enable RMD160 hash support."
-		ewarn "See bug #198398 for more information."
 	fi
 
 	has_version "<=${CATEGORY}/${PN}-2.2_pre5" \
