@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1184 2013/01/24 22:13:22 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1185 2013/01/27 22:04:14 zmedico Exp $
+
+  27 Jan 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.11.31.ebuild,
+  portage-2.1.11.50.ebuild, portage-2.2.0_alpha142.ebuild,
+  portage-2.2.0_alpha161.ebuild, portage-9999.ebuild:
+  Remove obsolete warning about RMD160 hash support.
 
 *portage-2.2.0_alpha161 (24 Jan 2013)
 
